Replaced info and uploaded an image

--- a/static/index.html
+++ b/static/index.html
@@ -5,21 +5,41 @@
 	<meta charset="utf-8">
 	<title>HCI Project Portfolio</title>
 </head>
+<style>
+ .buttonl{
 
-<body>
+	-webkit-appearance: none;
+   font-size:16px;
+    padding: 16.5px 18px 14px 18px;
+    background: #446CB3;
+    border: none;
+    color: #FFF;
+    box-shadow: 1px 1px 1px #4C6E91;
+    -webkit-box-shadow: 1px 1px 1px #4C6E91;
+    -moz-box-shadow: 1px 1px 1px #4C6E91;
+    text-shadow: 1px 1px 1px #5079A3;
+    
+}
+ .buttonl:hover{
+	-webkit-appearance: none;
+    background: #4183D7;
+}
+</style>
+<body style="width:600px;margin:0 auto">
 	<!-- this is a comment in HTML -->
-	<h1>Haoran Kuang</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+	<h1 style="background:#000;text-align:center;color:#fff">HAORAN KUANG</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+
+	<h4 class="buttonl" style="width:90px">WHO AM I</h4>
 
 	<!-- p means paragraph -->
-	<p>Kuang is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<p>Kuang is a third year student who is double majoring in Applied Math/Joint Economics and Computer Science. He is interested in studying the science and user experience behind the technologies.</p>
 
-	<h4>Projects</h4>
+	<h4 class="buttonl" style="width:170px">HAPPINESS PROJECT</h4>
+	<img src="hsm.png" width=600 pxalt="">
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>HSM focuses on the emotion and cognitive science within different social networking platform</li>
+		<li>Can individuals become happier with better relationships and fulfilling careers</li>
+		<li>Our team is developing a brand that helps people cultivate their love and achieve a flourishing life</li>
 	</ol>
 </body>
 </html>
